# mcp-test

./: .gitignore  .vercelignore  interactive_jd_demo.py  test_rag.py  test_rag2.py  vercel.json
mcp-client/: pyproject.toml
mcp_server/: DOCUMENTATION.md  README.md  api.py  claude_config_example.json  claude_desktop_config_vercel.json  main.py  pyproject.toml  requirements.txt  vercel.json  vercel_proxy.py
mcp_server/lib/: embeddings.py  generate.py  rerank.py  supabase.py
mcp_server/subagents/: leveling_guide.md  rubric_creator.md
mcp_vercel_server/: ARCHITECTURE.md  README.md  claude_desktop_config.example.json  proxy.py  proxy_requirements.txt  requirements.txt
mcp_vercel_server/leveling_guides/: UNICode.md  general_framework.md  m3.md  m4.md  m5.md  m6.md  m7.md  svp.md  uni1.md  uni2.md  uni3.md  uni4.md  uni5.md  uni6.md  vp.md
weather/: pyproject.toml  weather.py
